# qwen3-asr

./: .gitignore  README.md  pyproject.toml
src/qwen3_asr/: __init__.py
