[project]
name = "qwen3-asr"
version = "0.1.0"
description = "Qwen3-ASR CLI with support for wav, mp3, m4a audio files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qwen-asr>=0.0.6",
    "torch>=2.0.0",
    "soundfile>=0.13.0",
    "pydub>=0.25.0",
    "opencc-python-reimplemented>=0.1.7",
]

[project.scripts]
qwen3-asr = "qwen3_asr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen3_asr"]

[tool.uv]
package = true

